--- a/Shopping Cart/index.html
+++ b/Shopping Cart/index.html
@@ -8,7 +8,80 @@
     <title>Shopping Cart</title>
 </head>
 <body>
+    <nav class="mb-2">
+        <img id="burger" src="images/burger-menue.svg">
+
+        <p>E-<span>Shop</span></p>
+
+        <div id="cart">
+            <img id="cartImg" src="images/cart.svg">
+            <div class="cart-wrapper">
+                <p id="cartItemCount">2</p>
+            </div>
+        </div>
+    </nav>
+
+    <h1 class="center mb-2">Our Products</h1>
     
+    <main id="productContainer">
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
+        </div>
+        
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+
+        <div class="product">
+            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+
+            <p class="product-name bold mb-05">Product Name</p>
+
+            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
