--- a/Shopping Cart/index.html
+++ b/Shopping Cart/index.html
@@ -26,59 +26,111 @@
     <main id="productContainer">
 
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
             <p class="product-price bold  mb-05 sec-color">$12.00</p>
+
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+
+                <p>add to cart</p>
+            </div>
         </div>
         
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
+
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+
+                <p>add to cart</p>
+            </div>
         </div>
 
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
+
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+
+                <p>add to cart</p>
+            </div>
         </div>
 
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
+
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+
+                <p>add to cart</p>
+            </div>
         </div>
 
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
+
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
+
+                <p>add to cart</p>
+            </div>
         </div>
 
         <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="img-container">
+                <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            </div>
 
             <p class="product-name bold mb-05">Product Name</p>
 
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
-        </div>
+            <p class="product-price bold  mb-05 sec-color">$12.00</p>
 
-        <div class="product">
-            <img class="product-img  mb-05" src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg">
+            <div class="label">
+                <svg width="16px" height="16px" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart-fill">
+                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                </svg>
 
-            <p class="product-name bold mb-05">Product Name</p>
-
-            <p class="product-price bold  mb-05  sec-color">$12.00</p>
+                <p>add to cart</p>
+            </div>
         </div>
     </main>
 
