started with render methods

--- a/Shopping Cart/index.html
+++ b/Shopping Cart/index.html
@@ -8,6 +8,35 @@
     <title>Shopping Cart</title>
 </head>
 <body>
+    <div class="over-lay">
+        <div class="cart-container">
+            <button class="mb-1">X</button>
+
+            <h2 class="mb-1">You Cart</h2>
+
+            <div class="cart-item">
+                <img src="" alt="">
+
+                <div class="cart-item-info">
+                    <h3>Single Bed</h3>
+                    <p>$20.00</p>
+                </div>
+
+                <div class="cart-item-count">
+                    <p>2</p>
+
+                    <div class="btn-grp">
+                        <img src="images/plus.svg">
+                        <img src="images/minus.svg">
+                    </div>
+                </div>
+            </div>
+
+            <p class="mb-1 center">Your Total: $20.00</p>
+            <button class="clear-btn">clear cart</button>
+        </div>
+    </div>
+
     <nav class="mb-2">
         <img id="burger" src="images/burger-menue.svg">
 
@@ -16,7 +45,7 @@
         <div id="cart">
             <img id="cartImg" src="images/cart.svg">
             <div class="cart-wrapper">
-                <p id="cartItemCount">2</p>
+                <p id="cartItemCount">0</p>
             </div>
         </div>
     </nav>
@@ -24,7 +53,7 @@
     <h1 class="center mb-2">Our Products</h1>
     
     <main id="productContainer">
-        
+
     </main>
 
     <script src="script.js"></script>
