--- a/Shopping Cart/index.html
+++ b/Shopping Cart/index.html
@@ -8,32 +8,9 @@
     <title>Shopping Cart</title>
 </head>
 <body>
-    <div class="over-lay">
+    <div class="over-lay hide">
         <div class="cart-container">
-            <button class="mb-1">X</button>
-
-            <h2 class="mb-1">You Cart</h2>
-
-            <div class="cart-item">
-                <img src="" alt="">
-
-                <div class="cart-item-info">
-                    <h3>Single Bed</h3>
-                    <p>$20.00</p>
-                </div>
-
-                <div class="cart-item-count">
-                    <p>2</p>
-
-                    <div class="btn-grp">
-                        <img src="images/plus.svg">
-                        <img src="images/minus.svg">
-                    </div>
-                </div>
-            </div>
-
-            <p class="mb-1 center">Your Total: $20.00</p>
-            <button class="clear-btn">clear cart</button>
+            <button id="close" class="mb-1 close-btn">X</button>
         </div>
     </div>
 
