cart item scroll fix

--- a/Shopping Cart/index.html
+++ b/Shopping Cart/index.html
@@ -11,6 +11,14 @@
     <div class="over-lay hide">
         <div class="cart-container">
             <button id="close" class="mb-1 close-btn">X</button>
+            <h2 class="mb-1">Your Cart</h2>
+
+            <div class="cart-item-container">
+
+            </div>
+
+            <p class="mb-1 center">Your Total: $ <span id="cartCost">0</span></p>
+            <button class="clear-btn">Clear Cart</button>
         </div>
     </div>
 
