--- a/notary app/index.html
+++ b/notary app/index.html
@@ -91,15 +91,17 @@
             <p class="info-heading">Search</p>
 
             <form id="bookSearchForm">
-                <input type="text">
+                <input type="text" placeholder="Search for...">
                 <input type="submit">
             </form>
+
+            <p class="info-heading footer">T&J Web Solutions</p>
         </div>
 
         <div class="info-container">
             <p class="info-heading">Select a Book</p>
 
-            <ul class="book-list">
+            <ul class="list">
                 <li><button>Book 1</button></li>
                 <li><button>Book 2</button></li>
                 <li><button>Book 3</button></li>
@@ -109,14 +111,31 @@
 
         <div class="info-container">
             <p class="info-heading">Most Used Words</p>
+
+            <ul id="mostUsedWords" class="list">
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+            </ul>
         </div>
 
         <div class="info-container">
             <p class="info-heading">Least Used Words</p>
+
+            <ul id="leastUsedWords" class="list">
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+                <li><p>example: 200</p></li>
+            </ul>
         </div>
 
         <div class="info-container">
             <p class="info-heading">Document Stats</p>
+            <p id="wordCount">Word Count: 200</p>
         </div>
     </div>
 
