--- a/notary app/index.html
+++ b/notary app/index.html
@@ -15,9 +15,7 @@
             </div>
             
 
-            <p id="book-content">
-                                
-            </p>
+            <p id="book-content"></p>
 
             <p class="info-heading footer">T&J Web Solutions</p>
         </div>
@@ -29,11 +27,11 @@
             <p class="info-heading">Search</p>
 
             <form id="bookSearchForm">
-                <input type="text" placeholder="Search for...">
+                <input name="word" type="text" placeholder="Search for...">
                 <input type="submit">
             </form>
 
-            <p class="info-heading footer">T&J Web Solutions</p>
+            <p id="searchWordCount"></p>
         </div>
 
         <div class="info-container">
