--- a/Heads or Tails/index.html
+++ b/Heads or Tails/index.html
@@ -19,9 +19,9 @@
     <img src="images/head.svg">
 
     <div class="players-score">
-        <p>Player score <span id="playerOneScore">0</span></p>
+        <p>Player score: <span id="playerOneScore">0</span></p>
 
-        <p>Computer score <span id="computerScore">0</span></p>
+        <p>Computer score: <span id="computerScore">0</span></p>
     </div>
 
     <h2>Make Selection</h2>
