--- a/Heads or Tails/index.html
+++ b/Heads or Tails/index.html
@@ -13,10 +13,10 @@
     <div class="players-score">
         <p>Player selected: <span id="playerOneSelected"></span></p>
 
-        <p>Computer selected: <span id="playerOneSelected"></span></p>
+        <p>Computer selected: <span id="comOneSelected"></span></p>
     </div>
 
-    <img src="images/head.svg">
+    <img src="images/heads.svg">
 
     <div class="players-score">
         <p>Player score: <span id="playerOneScore">0</span></p>
@@ -30,6 +30,7 @@
         <button data-type="heads">heads</button>
         <button data-type="tails">tails</button>
     </div>
-    <link rel="stylesheet" href="script.js">
+    
+    <script src="script.js"></script>
 </body>
 </html>
