--- a/Heads or Tails/index.html
+++ b/Heads or Tails/index.html
@@ -11,17 +11,17 @@
     <h1>First Player to 5 Wins</h1>
 
     <div class="players-score">
-        <p>Player selected: <span id="playerOneSelected"></span></p>
+        <p>Player selected: <span class="bold" id="playerOneSelected"></span></p>
 
-        <p>Computer selected: <span id="comOneSelected"></span></p>
+        <p>Computer selected: <span class="bold" id="comOneSelected"></span></p>
     </div>
 
     <img src="images/heads.svg">
 
     <div class="players-score">
-        <p>Player score: <span id="playerOneScore">0</span></p>
+        <p>Player score: <span class="bold" id="playerOneScore">0</span></p>
 
-        <p>Computer score: <span id="computerScore">0</span></p>
+        <p>Computer score: <span class="bold" id="computerScore">0</span></p>
     </div>
 
     <h2>Make Selection</h2>
